fix: raise title so it doesn't overlap with about me box

--- a/src/styles.css
+++ b/src/styles.css
@@ -221,14 +221,13 @@ h3 {
 
   h1 {
     font-size: 2.8rem;
-    top: 24px;
+    top: 12px;
     left: calc(var(--frame-width) - 55px);
     white-space: nowrap;
   }
 
   .frame {
     --frame-width: 300px;
-    height: 370px;
 
     width: var(--frame-width);
     margin-right: 24px;
